--- a/photobox/photobox.css
+++ b/photobox/photobox.css
@@ -4,8 +4,8 @@
 	opacity:0;
 	overflow:hidden;
 	-moz-user-select:none;
-	background:radial-gradient(rgba(0,0,0,.5) 0%, rgba(0,0,0,.8) 100%);
-	background:-webkit-radial-gradient(50% 50%, ellipse closest-corner, rgba(0,0,0,.3) 1%, rgba(0,0,0,.8) 100%);
+	background:radial-gradient(rgba(0,0,0,.6) 0%, rgba(0,0,0,.9) 100%);
+	background:rgba(0,0,0,0.85);
 	width:100%;
 	height:100%;
 	position:fixed;
@@ -13,9 +13,9 @@
 	left:0;
 	top:0;
 	-webkit-transform:translate3d(0px, 0px, 0px);
-	transition:opacity 400ms ease;
-	-webkit-transition:opacity 400ms ease;
-	-ms-transition:opacity 400ms ease;
+	-webkit-transition:opacity 300ms ease;
+	-ms-transition:opacity 300ms ease;
+	transition:opacity 300ms ease;
 	text-align:center;
 	pointer-events:none;
 }
@@ -25,9 +25,10 @@
 @keyframes pbLoaderFrames{ 50%{ height:5px; } }
 @-webkit-keyframes pbLoaderFrames{ 50%{ height:5px; } }
 
+
 #pbOverlay .pbLoader{ visibility:hidden; opacity:0; pointer-events:none; -webkit-transform:scale(.2); transform:scale(.2); position:absolute; z-index:999; top:50%; left:50%; margin:-50px 0 0 -50px; text-align:center; border-radius:100%; box-shadow:15px 32px 60px -20px #FFF inset, 1px 1px 3px 1px #FFF inset, 0 0 20px; width:100px; height:100px; transition:0.3s; -webkit-transition:0.2s; }
 #pbOverlay.thumbs .pbLoader{ margin-top:-100px; }
-#pbOverlay.pbLoading:not(.msie) .pbLoader{ visibility:visible; opacity:1; -webkit-transform:scale(1); transform:scale(1); }
+#pbOverlay.pbLoading:not(.msie):not(.error) .pbLoader{ visibility:visible; opacity:1; -webkit-transform:scale(1); transform:scale(1); }
 	#pbOverlay .pbLoader b{ display:inline-block; vertical-align:middle; margin:0 2px; width:8px; height:60px; border-radius:5px; background:rgba(255,255,255,0.8); box-shadow:0 0 10px rgba(0,0,0,0.5); -webkit-animation:.9s pbLoaderFrames infinite linear; animation:.9s pbLoaderFrames infinite linear; }
 	#pbOverlay .pbLoader b:nth-child(1){  }
 	#pbOverlay .pbLoader b:nth-child(2){ -webkit-animation-delay:.3s; animation-delay:.3s; }
@@ -38,12 +39,15 @@
 #pbOverlay .prevNext:after,
 #pbOverlay .pbLoader:before{ content:""; display:inline-block; height:100%; margin-right:-0.25em; vertical-align:middle; }
 
-/* fixes image flickering when resizing with transform */
-#pbOverlay .imageWrap{ box-sizing:border-box; -moz-box-sizing:border-box; vertical-align:middle; height:100%; perspective:1200px; -webkit-perspective:1200px; position:relative; }
-	#pbOverlay.error .imageWrap{ display:inline-block; }
+/* Animation when image was not loaded */
+@keyframes deadImage{ 50%{ text-shadow:0 0 25px rgba(255,255,255,.5); transform:scale(0.85); } }
+@-webkit-keyframes deadImage{ 50%{ text-shadow:0 0 25px rgba(255,255,255,.5); -webkit-transform:scale(0.85); } }
+
+#pbOverlay .imageWrap{ -moz-box-sizing:border-box; box-sizing:border-box; vertical-align:middle; height:100%; perspective:1200px; -webkit-perspective:1200px; position:relative; }
+	/*#pbOverlay.error .imageWrap{ display:inline-block; width:100%; }*/
 	#pbOverlay.pbLoading .imageWrap{ display:inline-block\9; width:100%; } /* ie8+9 hack */
-	#pbOverlay .imageWrap:before{ content:'Could not be loaded'; position:absolute; top:-999px; opacity:0; background:rgba(0,0,0,.6); border-radius:50px; color:#FFF; display:inline-block; font-size:1.4em; font-weight:bold; line-height:1.2; padding:20px; text-transform:uppercase; vertical-align:middle; white-space:pre; transition:.6s; -webkit-transition:.6s; }
-	#pbOverlay.error .imageWrap:before{ position:static; opacity:1; transform:scale(1.2); -webkit-transform:scale(1.2); }
+	#pbOverlay .imageWrap:before{ content:'\2716'; position:absolute; top:-999px; left:0; width:100%; color:transparent; text-shadow:0 2px 35px rgba(255,255,255,0); font-size:22em; cursor:default; -webkit-transition:text-shadow .7s ease-out; transition:text-shadow .7s ease-out; }
+	#pbOverlay.error .imageWrap:before{ top:46%; text-shadow:0 0 0 #FFF; -webkit-animation:2s 1s deadImage infinite linear; animation:2s 1s deadImage infinite linear; }
 	#pbOverlay.thumbs .imageWrap{ margin-top:-50px; padding:50px 0; }
 	#pbOverlay.error .imageWrap img{ width:0; }
 
@@ -71,12 +75,12 @@
 
 #pbCloseBtn:before{ content:'\00D7'; font-weight:bold; }
 #pbCloseBtn:before, #pbAutoplayBtn:before{ display:inline-block; height:35px; width:35px; padding:8px 8px 12px 12px; font-size:2em; opacity:0.8; line-height:.7; vertical-align:middle; background:rgba(255,255,255,0.2); border-radius:0 0 0 70px; transition:0.1s ease-out; -webkit-transition:0.1s ease-out; }
-#pbCloseBtn:hover:before{ padding:10px 10px 24px 24px; font-size:2.2em; background:rgba(255,100,100,.4); }
+#pbCloseBtn:hover:before{ padding:15px 10px 24px 24px; background:rgba(255,100,100,.4); }
 
 /*-- autoplay controller --*/
-#pbAutoplayBtn{ display:none; right:auto; left:-50px; padding:0; width:50px; height:50px; font-size:0.8em; }
+#pbAutoplayBtn{ display:none; right:auto; left:-50px; padding:0; width:50px; height:50px; font-size:13px; }
 .hasAutoplay #pbAutoplayBtn{ display:block; }
-#pbAutoplayBtn:hover{ width:60px; height:60px; font-size:1em; }
+#pbAutoplayBtn:hover{ width:60px; height:60px; }
 .on #pbAutoplayBtn{ top:0px; left:0px;  transition:.1s ease-out; -webkit-transition:.1s ease-out; }
 	#pbAutoplayBtn:before{ content:'\2016'; width:100%; height:100%; border-radius:0 0 70px 0; font-weight:bold; padding:0; text-indent:-6px; line-height:1.6; }
 	#pbAutoplayBtn:active:before{ text-shadow:0 0 3px #FFF, 0 0 6px #FFF; }
@@ -84,7 +88,7 @@
 
 	#pbAutoplayBtn .pbProgress{ display:none\9; width:100%; height:100%; overflow:hidden; position:absolute; padding:6px; top:0; left:0; opacity:0.2; transform:rotateZ(0deg); -webkit-transform:rotateZ(0deg); -ms-transform:rotateZ(0deg); -webkit-transform-origin:0 0; -ms-transform-origin:0 0; transform-origin:0 0; -webkit-transition:0.4s; -ms-transition:0.4s; transition:0.4s; }
 	#pbAutoplayBtn.playing .pbProgress{ -webkit-transform:rotateZ(90deg); -ms-transform:rotateZ(90deg); transform:rotateZ(90deg); }
-	#pbAutoplayBtn .pbProgress:before{ content:''; position:absolute; right:0; bottom:0; width:200%; height:200%; border-radius:100%; box-shadow:0 0 0 8px #FFF inset; }
+	#pbAutoplayBtn .pbProgress:before{ content:''; position:absolute; right:0; bottom:0; width:200%; height:200%; border-radius:50%; box-shadow:0 0 0 8px #FFF inset; }
 	
 #pbCaption, .hide #pbCaption{ position:absolute; z-index:999; bottom:-110px; width:100%; -webkit-transition:0.4s; transition:0.4s; }
 .show.on #pbCaption{ bottom:5px; transition-delay:.5s; -webkit-transition-delay:.5s; }
