--- a/photobox/photobox.css
+++ b/photobox/photobox.css
@@ -1,40 +1,29 @@
 /* PICBOX */
 #pbOverlay.show{ opacity:1; pointer-events:auto; }
 #pbOverlay{
-	opacity:0;
-	overflow:hidden;
+	opacity:0; overflow:hidden; width:100%; height:100%; position:fixed; z-index:9999; left:0; top:0; text-align:center; pointer-events:none;
 	-moz-user-select:none;
-	background:radial-gradient(rgba(0,0,0,.6) 0%, rgba(0,0,0,.9) 100%);
 	background:rgba(0,0,0,0.85);
-	width:100%;
-	height:100%;
-	position:fixed;
-	z-index:9999;
-	left:0;
-	top:0;
+	background:radial-gradient(rgba(0,0,0,.6) 0%, rgba(0,0,0,.9) 100%);
 	-webkit-transform:translate3d(0px, 0px, 0px);
 	-webkit-transition:opacity 300ms ease;
 	-ms-transition:opacity 300ms ease;
 	transition:opacity 300ms ease;
-	text-align:center;
-	pointer-events:none;
 }
 #pbOverlay.msie{ background-color:rgba(0,0,0,.6); }
-#pbOverlay.msie.pbLoading .imageWrap{ background:url('../images/loading.gif') no-repeat center center; }
+#pbOverlay.msie.pbLoading .wrapper{ background:url('../images/loading.gif') no-repeat center center; }
 
 @keyframes pbLoaderFrames{ 50%{ height:5px; } }
 @-webkit-keyframes pbLoaderFrames{ 50%{ height:5px; } }
-
 
 #pbOverlay .pbLoader{ visibility:hidden; opacity:0; pointer-events:none; -webkit-transform:scale(.2); transform:scale(.2); position:absolute; z-index:999; top:50%; left:50%; margin:-50px 0 0 -50px; text-align:center; border-radius:100%; box-shadow:15px 32px 60px -20px #FFF inset, 1px 1px 3px 1px #FFF inset, 0 0 20px; width:100px; height:100px; transition:0.3s; -webkit-transition:0.2s; }
 #pbOverlay.thumbs .pbLoader{ margin-top:-100px; }
 #pbOverlay.pbLoading:not(.msie):not(.error) .pbLoader{ visibility:visible; opacity:1; -webkit-transform:scale(1); transform:scale(1); }
 	#pbOverlay .pbLoader b{ display:inline-block; vertical-align:middle; margin:0 2px; width:8px; height:60px; border-radius:5px; background:rgba(255,255,255,0.8); box-shadow:0 0 10px rgba(0,0,0,0.5); -webkit-animation:.9s pbLoaderFrames infinite linear; animation:.9s pbLoaderFrames infinite linear; }
-	#pbOverlay .pbLoader b:nth-child(1){  }
 	#pbOverlay .pbLoader b:nth-child(2){ -webkit-animation-delay:.3s; animation-delay:.3s; }
 	#pbOverlay .pbLoader b:nth-child(3){ -webkit-animation-delay:.6s; animation-delay:.6s; }
 
-#pbOverlay .imageWrap:after,
+#pbOverlay .wrapper:after,
 #pbCaption .pbThumbs ul:after,
 #pbOverlay .prevNext:after,
 #pbOverlay .pbLoader:before{ content:""; display:inline-block; height:100%; margin-right:-0.25em; vertical-align:middle; }
@@ -43,30 +32,34 @@
 @keyframes deadImage{ 50%{ text-shadow:0 0 25px rgba(255,255,255,.5); transform:scale(0.85); } }
 @-webkit-keyframes deadImage{ 50%{ text-shadow:0 0 25px rgba(255,255,255,.5); -webkit-transform:scale(0.85); } }
 
-#pbOverlay .imageWrap{ -moz-box-sizing:border-box; box-sizing:border-box; vertical-align:middle; height:100%; perspective:1200px; -webkit-perspective:1200px; position:relative; }
-	/*#pbOverlay.error .imageWrap{ display:inline-block; width:100%; }*/
-	#pbOverlay.pbLoading .imageWrap{ display:inline-block\9; width:100%; } /* ie8+9 hack */
-	#pbOverlay .imageWrap:before{ content:'\2716'; position:absolute; top:-999px; left:0; width:100%; color:transparent; text-shadow:0 2px 35px rgba(255,255,255,0); font-size:22em; cursor:default; -webkit-transition:text-shadow .7s ease-out; transition:text-shadow .7s ease-out; }
-	#pbOverlay.error .imageWrap:before{ top:46%; text-shadow:0 0 0 #FFF; -webkit-animation:2s 1s deadImage infinite linear; animation:2s 1s deadImage infinite linear; }
-	#pbOverlay.thumbs .imageWrap{ margin-top:-50px; padding:50px 0; }
-	#pbOverlay.error .imageWrap img{ width:0; }
+#pbOverlay .wrapper{ -moz-box-sizing:border-box; box-sizing:border-box; vertical-align:middle; height:100%; perspective:1200px; -webkit-perspective:1200px; position:relative; }
+	/*#pbOverlay.error .wrapper{ display:inline-block; width:100%; }*/
+	#pbOverlay.pbLoading .wrapper{ display:inline-block\9; width:100%; } /* ie8+9 hack */
+	#pbOverlay .wrapper:before{ content:'\2716'; color:transparent; text-shadow:0 2px 35px rgba(255,255,255,0); font-size:0; vertical-align:middle; cursor:default; -webkit-transition:text-shadow .7s ease-out; transition:text-shadow .7s ease-out; }
+	#pbOverlay.error .wrapper:before{ font-size:22em; text-shadow:0 0 0 #FFF; -webkit-animation:2s 1s deadImage infinite linear; animation:2s 1s deadImage infinite linear; }
+	#pbOverlay.thumbs .wrapper{ margin-top:-50px; padding:50px 0; }
+	#pbOverlay.error .wrapper img{ width:0; }
 
-#pbOverlay.show .imageWrap img{ 
-	transition:.8s .5s cubic-bezier(0.1, 0.87, 0.48, 1);
-	-webkit-transition:.8s .5s cubic-bezier(0.1, 0.8, 0.5, 1.03); 
-	-ms-transition:.3s .5s ease-out; 
+	#pbOverlay .wrapper > div{ display:none;  width:624px; height:351px; vertical-align:middle; border-radius:5px; background:rgba(0,0,0,0.5); }
+	#pbOverlay.video .wrapper > div{ display:inline-block; }
+	#pbOverlay iframe, #pbOverlay embed, #pbOverlay object{ display:block; width:100%; height:100%; vertical-align:top; }
 
-	transform:scale(1) rotateX(0); 
-	-webkit-transform:scale(1) rotateX(0); 
-	-ms-transform:scale(1); 
+	#pbOverlay.show .wrapper > *{
+		-ms-transition:.3s .5s ease-out; 
+		-webkit-transition:.8s .5s cubic-bezier(0.1, 0.8, 0.5, 1.03); 
+		transition:.8s .5s cubic-bezier(0.1, 0.87, 0.48, 1);
 
-	-webkit-backface-visibility:hidden; 
-	box-shadow:0 0 20px #000;
-}
-#pbOverlay .imageWrap img, #pbOverlay.hide .imageWrap img.prepare{ display:inline-block; opacity:1; vertical-align:middle; transform:scale(0) rotateX(80deg); -webkit-transform:scale(0) rotateX(80deg); -ms-transform:scale(0) rotateX(80deg); border-radius:6px; border:none; max-height:95%; max-width:100%; }
-#pbOverlay.on .imageWrap img{ transition-delay:0s; -webkit-transition-delay:0s; -ms-transition-delay:0s; }
-#pbOverlay .imageWrap img.zoomable{ transition:.1s; -webkit-transition:.1s; -ms-transition:.1ms; position:relative; z-index:9; }
-#pbOverlay.hide .imageWrap img{ transform:scale(1.2); -webkit-transform:scale(1.2); transform:none\9; opacity:0; transition:.4s ease-in; -webkit-transition:.4s ease-in; -ms-transition:.4s ease-in; }
+		-webkit-transform:none; 
+		-ms-transform:none; 
+		transform:none; 
+
+		-webkit-backface-visibility:hidden; 
+		box-shadow:0 0 20px #000;
+	}
+	#pbOverlay .wrapper > *, #pbOverlay.hide .wrapper > .prepare{ display:inline-block; opacity:1; vertical-align:middle; transform:scale(0) rotateX(80deg); -webkit-transform:scale(0) rotateX(80deg); -ms-transform:scale(0) rotateX(80deg); border-radius:6px; border:none; max-height:95%; max-width:100%; }
+	#pbOverlay.on .wrapper > *{ transition-delay:0s; -webkit-transition-delay:0s; -ms-transition-delay:0s; }
+	#pbOverlay .wrapper .zoomable{ transition:.1s; -webkit-transition:.1s; -ms-transition:.1ms; position:relative; z-index:9; }
+	#pbOverlay.hide .wrapper > *{ transform:scale(1.2); -webkit-transform:scale(1.2); transform:none\9; opacity:0; -webkit-transition:.4s ease-in; -ms-transition:.4s ease-in; transition:.4s ease-in; }
 
 /*-- close button --*/
 #pbCloseBtn, #pbAutoplayBtn{ position:absolute; top:-50px; right:-50px; z-index:999; display:block; padding:0 0 20px 20px; text-align:center; cursor:pointer; color:#FFF; transition:.3s .3s ease-out; -webkit-transition:.2s .3s ease-out; }
@@ -135,9 +128,9 @@
 
 /*------- media queries (for small screens) -----------*/
 @media all and (max-width:700px){
-	#pbOverlay .imageWrap img, #pbOverlay.hide .imageWrap img.prepare{ max-height:100%; }
+	#pbOverlay .wrapper img, #pbOverlay.hide .wrapper img.prepare{ max-height:100%; }
 	
-	#pbOverlay.thumbs .imageWrap{ padding:0; margin:0; }
+	#pbOverlay.thumbs .wrapper{ padding:0; margin:0; }
 	#pbOverlay .pbThumbs{ margin-bottom:-60px; }
 	#pbOverlay .pbThumbs.show{ margin:0; }
 	
