--- a/photobox/photobox.css
+++ b/photobox/photobox.css
@@ -33,6 +33,7 @@
 @-webkit-keyframes deadImage{ 50%{ text-shadow:0 0 25px rgba(255,255,255,.5); -webkit-transform:scale(0.85); } }
 
 #pbOverlay .wrapper{ -moz-box-sizing:border-box; box-sizing:border-box; vertical-align:middle; height:100%; perspective:1200px; -webkit-perspective:1200px; position:relative; }
+#pbOverlay.video .wrapper{ z-index:11; display:inline-block; }	
 	/*#pbOverlay.error .wrapper{ display:inline-block; width:100%; }*/
 	#pbOverlay.pbLoading .wrapper{ display:inline-block\9; width:100%; } /* ie8+9 hack */
 	#pbOverlay .wrapper:before{ content:'\2716'; color:transparent; text-shadow:0 2px 35px rgba(255,255,255,0); font-size:0; vertical-align:middle; cursor:default; -webkit-transition:text-shadow .7s ease-out; transition:text-shadow .7s ease-out; }
@@ -40,9 +41,10 @@
 	#pbOverlay.thumbs .wrapper{ margin-top:-50px; padding:50px 0; }
 	#pbOverlay.error .wrapper img{ width:0; }
 
-	#pbOverlay .wrapper > div{ display:none;  width:624px; height:351px; vertical-align:middle; border-radius:5px; background:rgba(0,0,0,0.5); }
+	#pbOverlay .wrapper > div{ display:none; width:624px; height:351px; vertical-align:middle; border-radius:5px; background:rgba(0,0,0,0.5); }
 	#pbOverlay.video .wrapper > div{ display:inline-block; }
-	#pbOverlay iframe, #pbOverlay embed, #pbOverlay object{ display:block; width:100%; height:100%; vertical-align:top; }
+	#pbOverlay iframe, #pbOverlay embed, #pbOverlay object{ display:block; width:100%; height:100%; opacity:1; transition:0.5s; }
+	#pbOverlay .wrapper .hide iframe{ opacity:0; }
 
 	#pbOverlay.show .wrapper > *{
 		-ms-transition:.3s .5s ease-out; 
@@ -56,6 +58,7 @@
 		-webkit-backface-visibility:hidden; 
 		box-shadow:0 0 20px #000;
 	}
+	
 	#pbOverlay .wrapper > *, #pbOverlay.hide .wrapper > .prepare{ display:inline-block; opacity:1; vertical-align:middle; transform:scale(0) rotateX(80deg); -webkit-transform:scale(0) rotateX(80deg); -ms-transform:scale(0) rotateX(80deg); border-radius:6px; border:none; max-height:95%; max-width:100%; }
 	#pbOverlay.on .wrapper > *{ transition-delay:0s; -webkit-transition-delay:0s; -ms-transition-delay:0s; }
 	#pbOverlay .wrapper .zoomable{ transition:.1s; -webkit-transition:.1s; -ms-transition:.1ms; position:relative; z-index:9; }
@@ -95,16 +98,17 @@
 #pbCaption .pbThumbs:hover{ clear:both; }
 	#pbCaption .pbThumbs ul{ display:inline-block; position:relative; list-style:none; height:80px; padding:0 5px; margin:0; white-space:pre; transition:0.2s; -webkit-transition:0.2s; }
 	#pbCaption .pbThumbs ul:after{ vertical-align:bottom; }
-		#pbCaption .pbThumbs li{ display:inline-block; vertical-align:bottom; height:70%; opacity:.6; transition:0.15s; -webkit-transition:0.15s; }
+		#pbCaption .pbThumbs li{ display:inline-block; vertical-align:bottom; height:70%; opacity:.6; text-align:center; position:relative; transition:0.15s; -webkit-transition:0.15s; }
 		#pbCaption .pbThumbs li.active{ height:100%; opacity:1; }
 		#pbCaption .pbThumbs li:hover{ height:100%; opacity:1; }
+		#pbCaption .pbThumbs li.video::before{ content:'\25BA'; color:#FFF; font-size:20px; height:20px; width:20px; line-height:0.9; position:absolute; bottom:4px; left:7px; background:rgba(0,0,0,0.4); box-shadow:0 0 0 3px rgba(0,0,0,0.4); border-radius:0 3px 0 0; pointer-events:none; }
 			#pbCaption .pbThumbs a{ height:100%; padding:0 2px; display:block; -moz-user-select:none; }
 			#pbCaption .pbThumbs li:hover a{  }
 				#pbCaption .pbThumbs img{ height:96%; min-height:95.9%; border:2px solid #FFF; max-width:none; border-radius:0; transition:0.15s; -webkit-transition:0.15s; }
 				#pbCaption .pbThumbs li:hover img{ min-height:96%; } /* fix a bug in Chrome and Opera */
 				#pbCaption .pbThumbs li.fast a img{ transition:none; -webkit-transition:none; }
 				#pbCaption .pbThumbs li.active a img{ border-color:#D8FF16; min-height:96%; }
-
+				
 #pbOverlay .prevNext{ display:none; background:rgba(0,0,0,0); position:absolute; z-index:10; height:100%; width:35%; padding:80px 0; opacity:0; box-sizing:border-box; -moz-box-sizing:border-box; top:0; transition:.2s ease-out; -webkit-transition:.2s ease-out; text-shadow:0 0 12px #000, 0 0 10px #FFF; cursor:pointer; }
 #pbOverlay.hasArrows .prevNext{ display:block; }
 #pbOverlay.on .prevNext:hover{ opacity:.5; }
