--- a/styles.css
+++ b/styles.css
@@ -37,19 +37,24 @@ a{ text-decoration:none; }
 	.main p{ margin:15px 0; }
 		.main footer{ margin-top:50px; text-shadow:none; font-size:0.9em; }
 		.main footer .copy{ font-family:Tahoma; font-size:1.2em; font-weight:bold; margin:0 3px; opacity:0.35; }
-		.main footer a{ margin-left:10px; color:#D8FF16; -webkit-transition:0.2s; -ms-transition:0.2s; transition:0.2s; }
-		.main footer a:hover{ text-decoration:none; color:#FF1668; }
-
+		.main footer a{ margin-left:10px; color:#D8FF16; border-radius:4px; position:relative; -webkit-transition:0.2s; -ms-transition:0.2s; transition:0.2s; }
+		.main footer a:hover{ text-decoration:none; color:#FFF; /* box-shadow:0 0 0 5px rgba(0,0,0,0.2); background:rgba(0,0,0,0.2); */ }
+		.main footer a::after{ content:'\203A'; font-size:2em; line-height:0.8; margin-left:-10px; display:inline-block; vertical-align:top; opacity:0; pointer-events:none; -webkit-transition:0.15s ease-out; -ms-transition:0.15s; transition:0.15s ease-out; }
+		.main footer a:hover::after{ opacity:1; margin-left:5px; }
+		
 #gallery{ float:right; width:60%; }
 	#gallery li{ list-style:none; perspective:100px; -webkit-perspective:100px; margin:1px; float:right; position:relative; transition:.1s; -webkit-transition:0.1s; }
+		#gallery li.video::before{ content:'\25BA'; color:#FFF; font-size:20px; height:20px; width:20px; line-height:0.9; position:absolute; bottom:3px; left:4px; z-index:1; background:rgba(0,0,0,0.4); box-shadow:0 0 0 3px rgba(0,0,0,0.4); border-radius:0 3px 0 0; pointer-events:none; opacity:0; transition:.5s 0.2s; }
+		#gallery li.loaded.video::before{ opacity:1; }
 		#gallery a{ display:block; width:75px; height:68px; vertical-align:bottom; overflow:hidden; background:rgba(0,0,0,0.1);
-					transition:.4s ease-out; -webkit-transition:0.4s ease-out; -webkit-transform:rotateX(90deg) translateY(-50%); transform:rotateX(90deg) translateY(-50%); }
+					transition:.4s ease-out; -webkit-transition:0.4s ease-out; -webkit-transform:rotateX(90deg) translate(-50px,-50%); transform:rotateX(90deg) translate(-50px,-50%); }
 		#gallery a:active, #gallery a:focus{ outline:none; }
-		#gallery a img{ min-height:100%; min-width:100%; transition:.3s ease-out; -webkit-transition:0.3s ease-out; }
-		#gallery .loaded a{ -webkit-transform:rotateX(0deg) translateY(0); transform:rotateX(0deg) translateY(0); }
-			#gallery li.loaded:hover{ transform:scale(1.5); -webkit-transform:scale(1.5); z-index:2; }
+		#gallery a img{ min-height:100%; width:100%; transition:.3s ease-out; -webkit-transition:0.3s ease-out; }
+		#gallery .loaded a{ -webkit-transform:rotateX(0deg) translate(0,0); transform:rotateX(0deg) translate(0,0); }
+			#gallery li.loaded:hover{ z-index:2; transform:scale(1.5); -webkit-transform:scale(1.5); }
 			#gallery li.loaded a:hover{ box-shadow:0 0 0 2px #FFF, 0 0 20px 5px #000; transition:.1s; -webkit-transition:0.1s; }
 			#gallery li.loaded:hover img{ transform:scale(1.2); -webkit-transform:scale(1.2); }
+			#gallery li.loaded.video:hover::before{ opacity:0; }
 	
 /*------- media queries -----------*/
 @media all and (max-width:700px){
